Cleaning in progress

--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -34,6 +34,8 @@
 <tr th:if="${cars.isEmpty()}">
     <td colspan="2"> No Cars Available </td>
 </tr>
+
+
 <tr th:each="car: ${cars}">
 
 
@@ -74,27 +76,12 @@
 </form>
 <p>===============Car by ID ============================ </p>
 <tr th:each="car: ${cars}">
-    <form action="#" th:action="@{'/car/{id}'(id=${car.getId()})}" th:method="get">
-        <!--            <input type="hidden" name="updateCar" value="delete" />-->
-        <button id="id" type="submit">Id</button>
-    </form>
-</tr>
+<form action="#" th:action="@{'/car/{id}'(id=${car.getId()})}" th:method="get">
 
-<!--<tr th:each="car: ${cars}">-->
-
-
-
-<!--        <h4 th:text="${car.getId()}"/>-->
-
-<!--        <a th:href="@{carbyid}">Edit Exam</a>-->
-
-
-
-<!--</tr>-->
-
-
-
-
+<!--    <p>Today is: <span th:text="${car.getId()}">ID of car</span></p>-->
+    Car of Id <span th:text="${car.getId()}">Get Car</span>
+    <button id="submit" type="submit">Get car</button>
+</form>
 
 </body>
 </html>
